correcting overfolw on img input, adding bottom space on mobile device

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -8,7 +8,7 @@ h3 {
   @apply text-lg text-left text-primary first-letter:uppercase
 }
 .container {
-  @apply flex flex-col gap-4 mx-auto max-w-sm p-6 bg-white bg-opacity-70 backdrop-blur-lg rounded-2xl
+  @apply flex flex-col gap-4 mx-auto max-w-sm p-4 sm:p-6 bg-white bg-opacity-70 backdrop-blur-lg rounded-2xl
 }
 @media only screen and (hover: none) and (pointer: coarse){
   .container {
@@ -52,16 +52,16 @@ input[type=submit] {
   }
 }
 .image-label div {
-  @apply grid bg-white hover:bg-beige;
+  @apply grid bg-white hover:bg-beige mt-1;
   img, input {
     @apply bg-transparent rounded-none;
     grid-area: 1 / 1 / 2 / 2;
   } 
   img {
-    @apply bg-transparent w-full h-full pb-12 object-cover aspect-video;
+    @apply bg-transparent w-full h-full pb-12 object-cover aspect-[4/3];
   }
   input {
-    @apply mt-auto;
+    @apply mt-auto p-0 w-full py-0.5;
   }
 }
 
